2007-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/win32.c:
   Prevent prefs dialog being hidden after using the prefs file dialog.


2007-11-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c, /src/main.c, src/symbols.c, tagmanager/tm_project.c,
   tagmanager/include/tm_workspace.h, tagmanager/tm_workspace.c:
   Create tagmanager status file in configuration directory, not in a
   guessed temporary directory to ensure having write access.
   Fix crashes if status file can't be written.


2007-10-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, data/filetype_extensions.conf:
   Set reStructuredText default file extension .rst.
 * src/document.c, src/editor.c:
   Use newline as autocompletion list separator, so that reST entries
   show correctly.
 * src/document.c:
   Ensure empty symbol list is shown when tags cannot be parsed (fixes
   wrong symbol list shown when creating a new document with an unsaved
   filename set).
 * src/filetypes.c:
   Only translate '%s source file' instead of whole title for filetypes
   (easier for new translations).


2007-10-31  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/svndiff.c: Make svn error messages better readable.


2007-10-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/svndiff.c:
   Factor out common make_diff() and show_output() functions for both
   file and directory diffs.
   Show any SVN error message on the status bar.
   Use directory name as prefix for output filename when doing a
   directory diff.
   Don't remove filename extension for file diffs.
   Fix some memory leaks.
 * plugins/svndiff.c:
   Add a separate menu item for diff from the current directory.
   Disable file and directory diff menu items if the current document
   has no filename.
   Disable project menu item when no project is open.
 * src/document.c: