@@ -2,6 +2,8 @@
 
  * src/win32.c:
    Prevent prefs dialog being hidden after using the prefs file dialog.
+ * src/build.c, src/prefs.c:
+   Enable build support on Windows.
 
 
 2007-11-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
